MSSQL bug fixing

--- a/App.config
+++ b/App.config
@@ -6,7 +6,7 @@
 
 	<connectionStrings>
 		<add name="TodoConnection"
-             connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=TodoAppDB;Integrated Security=True"
+             connectionString="Data Source=DESKTOP-QJTVBRD\SQLEXPRESS;Initial Catalog=TodoAppDB;Integrated Security=True"
              providerName="System.Data.SqlClient" />
 	</connectionStrings>
 
