--- a/MehmetBirolGolge_231502010.csproj
+++ b/MehmetBirolGolge_231502010.csproj
@@ -109,6 +109,11 @@
     <Compile Include="Forms\RegisterForm.Designer.cs">
       <DependentUpon>RegisterForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202505271014056_InitialCreate.cs" />
+    <Compile Include="Migrations\202505271014056_InitialCreate.Designer.cs">
+      <DependentUpon>202505271014056_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Task.cs" />
     <Compile Include="Models\TaskCategory.cs" />
@@ -117,6 +122,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DeepSeekService.cs" />
     <Compile Include="Services\ReportService.cs" />
+    <EmbeddedResource Include="Migrations\202505271014056_InitialCreate.resx">
+      <DependentUpon>202505271014056_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
