--- a/MehmetBirolGolge_231502010.csproj
+++ b/MehmetBirolGolge_231502010.csproj
@@ -87,10 +87,10 @@
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="OpenAI, Version=8.7.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Betalgo.OpenAI.8.7.2\lib\netstandard2.0\OpenAI.dll</HintPath>
-    </Reference>
     <Reference Include="PresentationCore" />
+    <Reference Include="RestSharp, Version=106.15.0.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
+      <HintPath>packages\RestSharp.106.15.0\lib\net452\RestSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
@@ -139,6 +139,7 @@
     <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -181,7 +182,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ApiConfig.cs" />
-    <Compile Include="Services\OpenAIHelper.cs" />
+    <Compile Include="Services\OpenAIService.cs" />
     <Compile Include="Services\ReportService.cs" />
     <EmbeddedResource Include="Migrations\202505271014056_InitialCreate.resx">
       <DependentUpon>202505271014056_InitialCreate.cs</DependentUpon>
