--- a/packages.config
+++ b/packages.config
@@ -2,8 +2,9 @@
 <packages>
   <package id="Betalgo.OpenAI" version="8.7.2" targetFramework="net472" />
   <package id="EntityFramework" version="6.5.1" targetFramework="net472" />
-  <package id="EPPlus" version="8.0.5" targetFramework="net472" />
+  <package id="EPPlus" version="7.7.2" targetFramework="net472" />
   <package id="EPPlus.Interfaces" version="8.0.0" targetFramework="net472" />
+  <package id="EPPlus.System.Drawing" version="7.7.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="6.0.0" targetFramework="net472" />
